--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,10 +8,14 @@
 </head>
 
 <body>
+    p {
+        /* hex example: */
+        color: #1100ff;
+      }
+      
     <h1>Spaghetti Bolognese</h1>
-    <img src="Spaghetti.jpg"  width="300" length="300" alt="Bild einer leckeren Spaghetti.">
+    <img src="Spaghetti.jpg" width="250" length="250" alt="Bild einer leckeren Spaghetti.">
     <p>Ein klassisches italienisches Gericht aus Spaghetti, Hackfleisch und Tomaten!</p>
-
     <h2>Zutaten:</h2>
     <ul>
         <li>Spaghetti</li>
